# datasette-embeddings

./: README.md  pyproject.toml
datasette_embeddings/: __init__.py
datasette_embeddings/templates/: embeddings_semantic_search.html
tests/: test_embeddings.py
tests/cassettes/test_embeddings/: test_enrichment.yaml  test_similarity_search.yaml  test_similarity_search[False-items.id = _embeddings_items.id].yaml  test_similarity_search[True-items.category = _embeddings_items.category and items.id = _embeddings_items.id].yaml
