[project]
name = "datasette-embeddings"
version = "0.1a3"
description = "Store and query embedding vectors in Datasette tables"
readme = "README.md"
authors = [{name = "Datasette"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette",
    "datasette-enrichments",
    "sqlite-utils",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-embeddings"
Changelog = "https://github.com/datasette/datasette-embeddings/releases"
Issues = "https://github.com/datasette/datasette-embeddings/issues"
CI = "https://github.com/datasette/datasette-embeddings/actions"

[project.entry-points.datasette]
embeddings = "datasette_embeddings"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-recording", "datasette-test"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_embeddings = ["templates/*"]
